@@ -37,12 +37,13 @@ define( function( require ) {
     // nodes
     var arrowHead = new Path( new Shape()
       .moveTo( 0, 0 )
-      .lineTo( -ARROW_SIZE.width, ARROW_SIZE.height / 2 )
-      .lineTo( -ARROW_SIZE.width, -ARROW_SIZE.height / 2 )
+      .lineTo( ARROW_SIZE.width, ARROW_SIZE.height / 2 )
+      .lineTo( ARROW_SIZE.width, -ARROW_SIZE.height / 2 )
       .close(),
       { fill: 'black' } );
     var valueNode = new Text( '0', {
       font: VALUE_FONT,
+      left: arrowHead.right + 3,
       centerY: arrowHead.centerY
     } );
 
@@ -50,15 +51,14 @@ define( function( require ) {
     thisNode.addChild( valueNode );
     thisNode.addChild( arrowHead );
 
+    // x location
+    thisNode.left = mvt.modelToViewX( beaker.right ) + 3;
+
     // update when the volume changes
     volumeProperty.link( function( volume ) {
-
-      // value
+      // text
       valueNode.text = StringUtils.format( pattern_0value_1units, Util.toFixed( volume, PHScaleConstants.VOLUME_DECIMAL_PLACES ), litersString );
-      valueNode.right = arrowHead.left - 5;
-      thisNode.right = mvt.modelToViewX( beaker.left ) - 3;
-
-      // location
+      // y-location
       var solutionHeight = Util.linear( 0, beaker.volume, 0, beaker.size.height, volume ); // volume -> height, model coordinates
       thisNode.y = mvt.modelToViewY( beaker.location.y - solutionHeight );
     } );
